--- a/admin-client/src/selection.module.css
+++ b/admin-client/src/selection.module.css
@@ -13,7 +13,7 @@ body {
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   box-sizing: border-box;
   text-align: center;
 }
@@ -32,7 +32,6 @@ body {
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
-  margin-bottom: 8px;
 }
 
 .card {
